# parka-data-boundary

./: .cruft.json  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  assets.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml  release.yml
data/boundary/naturalearth/: README.md
data/boundary/naturalearth/v4.1.0/: ne_10m_admin_0_countries.sqlite  ne_10m_admin_1_states_provinces.sqlite
data/boundary/naturalearth/v5.0.0/: ne_10m_admin_0_countries.sqlite  ne_10m_admin_1_states_provinces.sqlite
data/boundary/naturalearth/v5.1.2/: ne_10m_admin_0_countries.sqlite  ne_10m_admin_1_states_provinces.sqlite
data/boundary/region/: README.md
deploy/: upload.sh
src/parka_data_boundary/: __init__.py  manifest.json  packaging.py
