[build-system]
requires = ["setuptools >=63", "wheel", "setuptools_scm[toml] >=7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.cruft]
skip = ["setup.cfg"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"
