[metadata]
name = parka-data-boundary
summary = Raincoat parka-data-boundary
author = Raincoat Insurance, Inc.
author_email = support@teamraincoat.com
home_page = https://teamraincoat.com
description_file = README.md
keywords = raincoat parka data boundary

[options]
package_dir =
  =src
packages = find_namespace:
include_package_data = True

dependency_links = https://gitlab.com/api/v4/projects/20210002/packages/pypi/simple
install_requires =

[options.extras_require]
dev =

all =
  %(dev)s


[options.packages.find]
where = src

;[options.entry_points]
;console_scripts =
;  parka-data-boundary = parka_data_boundary.cli:main


[tool:pytest]
# --numprocesses=auto
addopts = -ra --quiet --color=no
python_files = test_*.py *_test.py tests/*.py
python_functions = test_* *_test
markers =
  slow: slow marker
